--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Jonathan Higgins
+email: jonathan@jphiggins.co.uk
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Composer and performer based in London whose music focuses on exploring how noise can be utilised as a transformative and generative tool. 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://jphiggins.co.uk" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: j_p_higgins
+github_username:  j-p-higgins
 
 # Build settings
 remote_theme: b2a3e8/jekyll-theme-console
