Added pages and some initial content

--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,17 @@ github_username:  j-p-higgins
 # Build settings
 remote_theme: b2a3e8/jekyll-theme-console
 style: light
-footer: '<a href="https://jphiggins.bandcamp.com/">bandcamp</a> <a href="https://www.youtube.com/channel/UCu6sS1xQcEqPCSRILJZFqDA">youtube</a> <a href="https://twitter.com/j_p_higgins">twitter</a>'
+footer: '<a href="https://jphiggins.bandcamp.com/" target="_blank">bandcamp</a> <a href="https://www.youtube.com/channel/UCu6sS1xQcEqPCSRILJZFqDA" target="_blank">youtube</a> <a href="https://twitter.com/j_p_higgins" target="_blank">twitter</a>'
 plugins:
   - jekyll-feed
+
+header_pages:
+ - index.md
+ - compositions.md
+# - about.md
+ - gigs.md
+ - software.md
+ - contact.md
 
 # Exclude from processing.
 # The following items will not be processed, by default.
