--- a/_config.yml
+++ b/_config.yml
@@ -28,11 +28,12 @@ twitter_username: j_p_higgins
 github_username:  j-p-higgins
 
 # Build settings
-remote_theme: b2a3e8/jekyll-theme-console
+remote_theme: j-p-higgins/jekyll-theme-console
 style: light
 footer: '<a href="https://jphiggins.bandcamp.com/" target="_blank">bandcamp</a> <a href="https://www.youtube.com/channel/UCu6sS1xQcEqPCSRILJZFqDA" target="_blank">youtube</a> <a href="https://twitter.com/j_p_higgins" target="_blank">twitter</a>'
 plugins:
   - jekyll-feed
+  - jekyll-responsive-image
 
 header_pages:
  - index.md
