--- a/_config.yml
+++ b/_config.yml
@@ -33,13 +33,13 @@ style: light
 footer: '<a href="https://jphiggins.bandcamp.com/" target="_blank">bandcamp</a> <a href="https://www.youtube.com/channel/UCu6sS1xQcEqPCSRILJZFqDA" target="_blank">youtube</a> <a href="https://twitter.com/j_p_higgins" target="_blank">twitter</a>'
 plugins:
   - jekyll-feed
-  - jekyll-responsive-image
 
 header_pages:
  - index.md
  - compositions.md
-# - about.md
+# - glitchturntablism.md
  - gigs.md
+ - research.md
  - software.md
  - contact.md
 
