started adding compositions to the music page

--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ style: light
 footer: '<a href="https://jphiggins.bandcamp.com/" target="_blank">bandcamp</a> <a href="https://www.youtube.com/channel/UCu6sS1xQcEqPCSRILJZFqDA" target="_blank">youtube</a> <a href="https://twitter.com/j_p_higgins" target="_blank">twitter</a>'
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
 
 header_pages:
  - index.md
