--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,7 @@ header_pages:
  - index.md
  - compositions.md
 # - glitchturntablism.md
+ - justsound.md
  - gigs.md
  - research.md
  - software.md
